--- a/docs/_sass/example.sass
+++ b/docs/_sass/example.sass
@@ -58,6 +58,10 @@
 .bd-snippet-code
   background-color: $pre-background
 
+.bd-snippet.bd-is-clipped
+  .bd-snippet-code
+    overflow: auto
+
 +desktop
   .bd-snippet.bd-is-vertical
     align-items: stretch
@@ -161,6 +165,9 @@ $structure-invert: $danger-invert
     &:hover
       background-color: $yellow
       color: $yellow-invert
+    &:focus,
+    &:active
+      box-shadow: none
   .bd-expand
     right: 45px
   +tablet
