--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -2537,9 +2537,25 @@ a.box:active {
   border-color: white;
 }
 
+.input.is-white:focus, .input.is-white.is-focused, .input.is-white:active, .input.is-white.is-active,
+.textarea.is-white:focus,
+.textarea.is-white.is-focused,
+.textarea.is-white:active,
+.textarea.is-white.is-active {
+  box-shadow: 0 0 0 0.125em rgba(255, 255, 255, 0.25);
+}
+
 .input.is-black,
 .textarea.is-black {
   border-color: #0a0a0a;
+}
+
+.input.is-black:focus, .input.is-black.is-focused, .input.is-black:active, .input.is-black.is-active,
+.textarea.is-black:focus,
+.textarea.is-black.is-focused,
+.textarea.is-black:active,
+.textarea.is-black.is-active {
+  box-shadow: 0 0 0 0.125em rgba(10, 10, 10, 0.25);
 }
 
 .input.is-light,
@@ -2547,9 +2563,25 @@ a.box:active {
   border-color: whitesmoke;
 }
 
+.input.is-light:focus, .input.is-light.is-focused, .input.is-light:active, .input.is-light.is-active,
+.textarea.is-light:focus,
+.textarea.is-light.is-focused,
+.textarea.is-light:active,
+.textarea.is-light.is-active {
+  box-shadow: 0 0 0 0.125em rgba(245, 245, 245, 0.25);
+}
+
 .input.is-dark,
 .textarea.is-dark {
   border-color: #363636;
+}
+
+.input.is-dark:focus, .input.is-dark.is-focused, .input.is-dark:active, .input.is-dark.is-active,
+.textarea.is-dark:focus,
+.textarea.is-dark.is-focused,
+.textarea.is-dark:active,
+.textarea.is-dark.is-active {
+  box-shadow: 0 0 0 0.125em rgba(54, 54, 54, 0.25);
 }
 
 .input.is-primary,
@@ -2557,9 +2589,25 @@ a.box:active {
   border-color: #00d1b2;
 }
 
+.input.is-primary:focus, .input.is-primary.is-focused, .input.is-primary:active, .input.is-primary.is-active,
+.textarea.is-primary:focus,
+.textarea.is-primary.is-focused,
+.textarea.is-primary:active,
+.textarea.is-primary.is-active {
+  box-shadow: 0 0 0 0.125em rgba(0, 209, 178, 0.25);
+}
+
 .input.is-info,
 .textarea.is-info {
   border-color: #3273dc;
+}
+
+.input.is-info:focus, .input.is-info.is-focused, .input.is-info:active, .input.is-info.is-active,
+.textarea.is-info:focus,
+.textarea.is-info.is-focused,
+.textarea.is-info:active,
+.textarea.is-info.is-active {
+  box-shadow: 0 0 0 0.125em rgba(50, 115, 220, 0.25);
 }
 
 .input.is-success,
@@ -2567,14 +2615,38 @@ a.box:active {
   border-color: #23d160;
 }
 
+.input.is-success:focus, .input.is-success.is-focused, .input.is-success:active, .input.is-success.is-active,
+.textarea.is-success:focus,
+.textarea.is-success.is-focused,
+.textarea.is-success:active,
+.textarea.is-success.is-active {
+  box-shadow: 0 0 0 0.125em rgba(35, 209, 96, 0.25);
+}
+
 .input.is-warning,
 .textarea.is-warning {
   border-color: #ffdd57;
 }
 
+.input.is-warning:focus, .input.is-warning.is-focused, .input.is-warning:active, .input.is-warning.is-active,
+.textarea.is-warning:focus,
+.textarea.is-warning.is-focused,
+.textarea.is-warning:active,
+.textarea.is-warning.is-active {
+  box-shadow: 0 0 0 0.125em rgba(255, 221, 87, 0.25);
+}
+
 .input.is-danger,
 .textarea.is-danger {
   border-color: #ff3860;
+}
+
+.input.is-danger:focus, .input.is-danger.is-focused, .input.is-danger:active, .input.is-danger.is-active,
+.textarea.is-danger:focus,
+.textarea.is-danger.is-focused,
+.textarea.is-danger:active,
+.textarea.is-danger.is-active {
+  box-shadow: 0 0 0 0.125em rgba(255, 56, 96, 0.25);
 }
 
 .input.is-small,
@@ -9634,6 +9706,10 @@ html.route-index #carbon {
   background-color: whitesmoke;
 }
 
+.bd-snippet.bd-is-clipped .bd-snippet-code {
+  overflow: auto;
+}
+
 @media screen and (min-width: 1008px) {
   .bd-snippet.bd-is-vertical {
     align-items: stretch;
@@ -9771,6 +9847,12 @@ html.route-index #carbon {
 .highlight .bd-expand:hover {
   background-color: #ffdd57;
   color: rgba(0, 0, 0, 0.7);
+}
+
+.highlight .bd-copy:focus, .highlight .bd-copy:active,
+.highlight .bd-expand:focus,
+.highlight .bd-expand:active {
+  box-shadow: none;
 }
 
 .highlight .bd-expand {
