--- a/docs/documentation/components/pagination.html
+++ b/docs/documentation/components/pagination.html
@@ -209,11 +209,7 @@ variables:
       </p>
     </div>
 
-    <div class="bd-example">
-      {{pagination_example}}
-    </div>
-
-    {% highlight html %}{{pagination_example}}{% endhighlight %}
+    {% include snippet.html content=pagination_example horizontal=true clipped=true %}
 
     <div class="content">
       <p>
@@ -221,11 +217,7 @@ variables:
       </p>
     </div>
 
-    <div class="bd-example">
-      {{pagination_options_example}}
-    </div>
-
-    {% highlight html %}{{pagination_options_example}}{% endhighlight %}
+    {% include snippet.html content=pagination_options_example horizontal=true clipped=true %}
 
     <div class="content">
       <p>
@@ -233,17 +225,9 @@ variables:
       </p>
     </div>
 
-    <div class="bd-example">
-      {{pagination_centered_example}}
-    </div>
+    {% include snippet.html content=pagination_centered_example horizontal=true clipped=true %}
 
-    {% highlight html %}{{pagination_centered_example}}{% endhighlight %}
-
-    <div class="bd-example">
-      {{pagination_right_example}}
-    </div>
-
-    {% highlight html %}{{pagination_right_example}}{% endhighlight %}
+    {% include snippet.html content=pagination_right_example horizontal=true clipped=true %}
 
     {% include anchor.html name="Sizes" %}
 
@@ -252,17 +236,11 @@ variables:
       You only need to append the <strong>modifier</strong> <code>is-small</code>, <code>is-medium</code>, or <code>is-large</code> to the <code>pagination</code> component.
     </p>
 
-    <div class="bd-example">
-      {{pagination_small_example}}
-    </div>
+    {% include snippet.html content=pagination_small_example horizontal=true clipped=true %}
 
-    <div class="bd-example">
-      {{pagination_medium_example}}
-    </div>
+    {% include snippet.html content=pagination_medium_example horizontal=true clipped=true %}
 
-    <div class="bd-example">
-      {{pagination_large_example}}
-    </div>
+    {% include snippet.html content=pagination_large_example horizontal=true clipped=true %}
 
     {% include variables.html %}
 
