--- a/docs/_includes/snippet.html
+++ b/docs/_includes/snippet.html
@@ -1,6 +1,7 @@
 <div class="
   bd-snippet
   {% if include.horizontal %}bd-is-horizontal{% else %}bd-is-vertical{% endif %}
+  {% if include.clipped %}bd-is-clipped{% endif %}
   {% if include.size %}bd-is-{{ include.size }}{% endif %}
   ">
   <div class="bd-snippet-preview">
