--- a/docs/documentation/components/breadcrumb.html
+++ b/docs/documentation/components/breadcrumb.html
@@ -160,75 +160,53 @@ variables:
     </div>
 
     <hr>
-    <div class="bd-example">
-      {{breadcrumb_example}}
-    </div>
+    {% include snippet.html content=breadcrumb_example horizontal=true clipped=true %}
 
     {% highlight html %}{{breadcrumb_example}}{% endhighlight %}
 
-    <hr>
+    {% include anchor.html name="Alignment" %}
 
-    <h3 class="title">Alignment</h3>
     <div class="content">
       <p>For alternative alignments, use the <code>is-centered</code> and <code>is-right</code> modifiers on the <code>.breadcrumb</code> container.</p>
     </div>
 
-
-    <div class="bd-example">
-      {{breadcrumb_centered_example}}
-    </div>
-
+    {% include snippet.html content=breadcrumb_centered_example horizontal=true clipped=true %}
 
     {% highlight html %}{{breadcrumb_centered_example}}{% endhighlight %}
 
-    <div class="bd-example">
-      {{breadcrumb_right_example}}
-    </div>
+    {% include snippet.html content=breadcrumb_right_example horizontal=true clipped=true %}
 
     {% highlight html %}{{breadcrumb_right_example}}{% endhighlight %}
 
-    <hr>
-
-    <h3 class="title">Icons</h3>
+    {% include anchor.html name="Icons" %}
 
     <div class="content">
       <p>You can use any of the <a href="http://fortawesome.github.io/Font-Awesome/">Font Awesome</a> <strong>icons</strong>.</p>
     </div>
 
-    <div class="bd-example">
-      {{breadcrumb_icons_example}}
-    </div>
+    {% include snippet.html content=breadcrumb_icons_example horizontal=true clipped=true %}
 
     {% highlight html %}{{breadcrumb_icons_example}}{% endhighlight %}
 
-    <hr>
+    {% include anchor.html name="Alternative separators" %}
 
-    <h3 class="title">Alternative separators</h3>
     <div class="content">
       <p>You can choose between <strong>4 additional separators</strong>: <code>has-arrow-separator</code> <code>has-bullet-separator</code> <code>has-dot-separator</code> and <code>has-succeeds-separator</code>.</p>
     </div>
 
-    <div class="bd-example">
-      {{breadcrumb_arrow_example}}
-    </div>
+    {% include snippet.html content=breadcrumb_arrow_example horizontal=true clipped=true %}
 
     {% highlight html %}{{breadcrumb_arrow_example}}{% endhighlight %}
 
-    <div class="bd-example">
-      {{breadcrumb_bullet_example}}
-    </div>
+    {% include snippet.html content=breadcrumb_bullet_example horizontal=true clipped=true %}
 
     {% highlight html %}{{breadcrumb_bullet_example}}{% endhighlight %}
 
-    <div class="bd-example">
-      {{breadcrumb_dot_example}}
-    </div>
+    {% include snippet.html content=breadcrumb_dot_example horizontal=true clipped=true %}
 
     {% highlight html %}{{breadcrumb_dot_example}}{% endhighlight %}
 
-    <div class="bd-example">
-      {{breadcrumb_succeeds_example}}
-    </div>
+    {% include snippet.html content=breadcrumb_succeeds_example horizontal=true clipped=true %}
 
     {% highlight html %}{{breadcrumb_succeeds_example}}{% endhighlight %}
 
@@ -238,21 +216,15 @@ variables:
       <p>You can choose between <strong>3 additional sizes</strong>: <code>is-small</code> <code>is-medium</code> and <code>is-large</code>.</p>
     </div>
 
-    <div class="bd-example">
-      {{breadcrumb_small_example}}
-    </div>
+    {% include snippet.html content=breadcrumb_small_example horizontal=true clipped=true %}
 
     {% highlight html %}{{breadcrumb_small_example}}{% endhighlight %}
 
-    <div class="bd-example">
-      {{breadcrumb_medium_example}}
-    </div>
+    {% include snippet.html content=breadcrumb_medium_example horizontal=true clipped=true %}
 
     {% highlight html %}{{breadcrumb_medium_example}}{% endhighlight %}
 
-    <div class="bd-example">
-      {{breadcrumb_large_example}}
-    </div>
+    {% include snippet.html content=breadcrumb_large_example horizontal=true clipped=true %}
 
     {% highlight html %}{{breadcrumb_large_example}}{% endhighlight %}
 
