--- a/docs/_includes/navbar.html
+++ b/docs/_includes/navbar.html
@@ -142,7 +142,7 @@
         </div>
       </div>
       <a class="navbar-item {% if page.route == 'expo' %}is-active{% endif %}" href="{{ site.url }}/expo/">
-        <span class="bd-emoji">🎨</span>
+        <span class="bd-emoji">⭐️</span>
         Expo
       </a>
       <a class="navbar-item {% if page.route == 'love' %}is-active{% endif %}" href="{{ site.url }}/love/">
