--- a/docs/_sass/love.sass
+++ b/docs/_sass/love.sass
@@ -1,3 +1,6 @@
+.bd-love
+  background-color: $background
+
 .bd-testimonials
   background-color: $background
 
@@ -72,10 +75,10 @@
   display: flex
   justify-content: center
 
-.bd-embrace
-  background-color: $background
-  border-radius: $radius
-  padding: 1.5rem
+// .bd-embrace
+//   background-color: $background
+//   border-radius: $radius
+//   padding: 1.5rem
 
 +mobile
   .bd-love
