--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -10327,7 +10327,6 @@ html.route-index .hero.is-primary a.column:hover .title strong {
 
 .bd-expo {
   background-color: whitesmoke;
-  background-color: white;
   padding: 1.5rem;
 }
 
@@ -10349,8 +10348,26 @@ html.route-index .hero.is-primary a.column:hover .title strong {
   position: relative;
 }
 
+.bd-website-image:hover .bd-website-shadow {
+  opacity: 0;
+}
+
 .bd-website-image:hover .bd-website-overlay {
   opacity: 0.25;
+}
+
+.bd-website-image .b-lazy {
+  opacity: 0;
+  transition: opacity 500ms ease-out;
+}
+
+.bd-website-image .b-loaded {
+  opacity: 1;
+}
+
+.bd-website-shadow {
+  border: 1px solid rgba(0, 0, 0, 0.04);
+  transition: opacity 200ms ease-out;
 }
 
 .bd-website-overlay {
@@ -10379,7 +10396,7 @@ html.route-index .hero.is-primary a.column:hover .title strong {
     margin-top: 3rem;
     width: calc(50% - 3rem);
   }
-  .bd-website:nth-child(1), .bd-website:nth-child(2) {
+  .bd-website:nth-child(1) {
     margin-top: 0;
   }
   .bd-website.bd-is-highlighted {
@@ -10388,6 +10405,10 @@ html.route-index .hero.is-primary a.column:hover .title strong {
   .bd-website-image {
     margin-bottom: 3rem;
   }
+}
+
+.bd-love {
+  background-color: whitesmoke;
 }
 
 .bd-testimonials {
@@ -10489,12 +10510,6 @@ html.route-index .hero.is-primary a.column:hover .title strong {
   align-items: flex-start;
   display: flex;
   justify-content: center;
-}
-
-.bd-embrace {
-  background-color: whitesmoke;
-  border-radius: 3px;
-  padding: 1.5rem;
 }
 
 @media screen and (max-width: 768px) {
