--- a/docs/_sass/expo.sass
+++ b/docs/_sass/expo.sass
@@ -1,6 +1,5 @@
 .bd-expo
   background-color: $background
-  background-color: $white
   padding: 1.5rem
 
 .bd-website
@@ -17,8 +16,19 @@
   margin-bottom: 1.5rem
   position: relative
   &:hover
+    .bd-website-shadow
+      opacity: 0
     .bd-website-overlay
       opacity: 0.25
+  .b-lazy
+    opacity: 0
+    transition: opacity 500ms $easing
+  .b-loaded
+    opacity: 1
+
+.bd-website-shadow
+  border: 1px solid rgba(#000, 0.04)
+  transition: opacity 200ms $easing
 
 .bd-website-overlay
   background-color: $black
@@ -40,8 +50,7 @@
   .bd-website
     margin-top: 3rem
     width: calc(50% - 3rem)
-    &:nth-child(1),
-    &:nth-child(2)
+    &:nth-child(1)
       margin-top: 0
     &.bd-is-highlighted
       width: 100%
