--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -10098,7 +10098,7 @@ html.route-index .hero.is-primary a.column:hover .title strong {
   }
 }
 
-.bd-tws {
+.bd-tws-home {
   background-color: whitesmoke;
   display: flex;
   flex-wrap: wrap;
@@ -10256,37 +10256,52 @@ html.route-index .hero.is-primary a.column:hover .title strong {
 }
 
 @media screen and (max-width: 768px) {
-  .bd-tws {
+  .bd-tws-home {
     padding: 1.5rem;
   }
-  .bd-tw {
+  .bd-tws-home .bd-tw:not(:last-child) {
     margin-bottom: 1.5rem;
   }
 }
 
 @media screen and (min-width: 769px), print {
-  .bd-tws {
+  .bd-tws-home {
     padding: 3rem;
   }
-  .bd-tw + .bd-tw {
+  .bd-tws-home .bd-tw + .bd-tw {
     margin-top: 1.5rem;
   }
 }
 
+@media screen and (max-width: 1007px) {
+  .bd-tws-love .bd-tw:not(:last-child) {
+    margin-bottom: 1.5rem;
+  }
+}
+
 @media screen and (min-width: 1008px) {
-  .bd-tws {
+  .bd-tws-home {
     min-height: 595px;
+  }
+  .bd-tws-love {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -0.75rem;
+  }
+  .bd-tws-love .bd-tw {
+    margin: 0.75rem;
+    width: calc(33.3333% - 1.5rem);
   }
 }
 
 @media screen and (min-width: 1200px) {
-  .bd-tws {
+  .bd-tws-home {
     min-height: 653px;
   }
 }
 
 @media screen and (min-width: 1392px) {
-  .bd-tws {
+  .bd-tws-home {
     min-height: 632px;
   }
 }
@@ -10535,8 +10550,7 @@ html.route-index .hero.is-primary a.column:hover .title strong {
 
 @media screen and (min-width: 769px), print {
   .bd-love {
-    padding-bottom: 3rem;
-    padding-top: 3rem;
+    padding: 3rem 1.5rem;
   }
   .bd-embrace {
     align-items: center;
