--- a/docs/_sass/love.sass
+++ b/docs/_sass/love.sass
@@ -96,8 +96,7 @@
 
 +tablet
   .bd-love
-    padding-bottom: 3rem
-    padding-top: 3rem
+    padding: 3rem 1.5rem
   .bd-embrace
     align-items: center
     display: flex
