--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -10195,7 +10195,7 @@ html.route-index .hero.is-primary a.column:hover .title strong {
 
 .Tweet-actions {
   align-items: center;
-  display: flex;
+  display: none;
   margin-top: 8.4px;
 }
 
