--- a/docs/_includes/carbon.html
+++ b/docs/_includes/carbon.html
@@ -1,3 +1,4 @@
+<div id="carboncontainer">
 <div id="carbon" class="box">
   <script>
     var _0xa6d2 = [
@@ -50,4 +51,5 @@
   {% unless site.env == "development" %}
   <script async src="//cdn.carbonads.com/carbon.js?zoneid=1673&serve=C6AILKT&placement=bulmaio" id="_carbonads_js" onerror="__fb(this)"></script>
   {% endunless %}
+</div>
 </div>
