--- a/docs/documentation/components/card.html
+++ b/docs/documentation/components/card.html
@@ -23,14 +23,14 @@ variables:
 <div class="card">
   <div class="card-image">
     <figure class="image is-4by3">
-      <img src="{{site.url}}/images/placeholders/1280x960.png" alt="descripe image">
+      <img src="{{site.url}}/images/placeholders/1280x960.png" alt="Placeholder image">
     </figure>
   </div>
   <div class="card-content">
     <div class="media">
       <div class="media-left">
         <figure class="image is-48x48">
-          <img src="{{site.url}}/images/placeholders/96x96.png" alt="descripe image">
+          <img src="{{site.url}}/images/placeholders/96x96.png" alt="Placeholder image">
         </figure>
       </div>
       <div class="media-content">
