Fix #395, Fix #735, Fix #930

--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -7,6 +7,9 @@
   <title>{% if page.fulltitle %}{{ page.fulltitle }}{% else %}{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}{% endif %}</title>
 
   <link rel="stylesheet" href="{{ site.fontawesome }}">
+  {% if page.mdi %}
+    <link rel="stylesheet" href="{{ site.mdi }}">
+  {% endif %}
   <link rel="stylesheet" href="{{ site.url }}/css/bulma-docs.css">
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.url }}">
