--- a/docs/_sass/specific.sass
+++ b/docs/_sass/specific.sass
@@ -152,3 +152,6 @@ $notification-padding: 1.25rem 2.5rem 1.25rem 1.5rem !default
     &.is-#{$name}
       background-color: $color
       color: $color-invert
+
+.bd-icon-size .icon
+  background-color: $yellow
